--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ subprojects/nlohmann_json-*
 subprojects/packagecache
 test/lattice_files/*.basis.csv
 test/lattice_files/*.basis.h5
+scripts/icelakerc
